Fix categories not wrapping on smaller screens
https://phabricator.wikimedia.org/T411620

--- a/src/pattern_library/css/blocks/detailed-info-box.css
+++ b/src/pattern_library/css/blocks/detailed-info-box.css
@@ -14,6 +14,7 @@
 		.iconized-categories {
 			display: flex;
 			flex-direction: row;
+			flex-wrap: wrap;
 			justify-content: space-between;
 			svg {
 				display: block;
